k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcg-ingress
  namespace: fcg
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: users-api
            port:
              number: 80
      - path: /api/games
        pathType: Prefix
        backend:
          service:
            name: catalog-api
            port:
              number: 80
